--- a/mia/Base.lproj/Radio.storyboard
+++ b/mia/Base.lproj/Radio.storyboard
@@ -26,7 +26,7 @@
                                     <segue destination="ln9-6M-WL7" kind="embed" id="Cc6-Aw-at5"/>
                                 </connections>
                             </containerView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RhJ-6z-4S4">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RhJ-6z-4S4">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i06-Ah-3kE">
