--- a/mia/Base.lproj/HomePage.storyboard
+++ b/mia/Base.lproj/HomePage.storyboard
@@ -16,16 +16,16 @@
                         <viewControllerLayoutGuide type="bottom" id="wcV-VL-v9l"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="mYa-hk-Nog">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="468"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="488"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F49-bH-9BK">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="468"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="488"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W8o-h5-qi0" customClass="iCarousel">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="348"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="368"/>
                                 <animations/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
@@ -63,9 +63,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="97C-zd-yXF">
-                                <rect key="frame" x="20" y="28" width="40" height="40"/>
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="97C-zd-yXF">
+                                <rect key="frame" x="20" y="28" width="30" height="30"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="97C-zd-yXF" secondAttribute="height" multiplier="1:1" id="FO6-vV-J8w"/>
+                                    <constraint firstAttribute="width" constant="30" id="bZ3-Uc-3rO"/>
+                                </constraints>
                                 <state key="normal" image="HP-ProfileIcon"/>
                                 <connections>
                                     <action selector="profileButtonPressed" destination="Vwv-7l-Pgq" eventType="touchUpInside" id="zRS-VX-wCN"/>
@@ -80,7 +84,7 @@
                                 </connections>
                             </button>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6LO-Lb-msR">
-                                <rect key="frame" x="0.0" y="100" width="320" height="468"/>
+                                <rect key="frame" x="0.0" y="80" width="320" height="488"/>
                                 <animations/>
                                 <connections>
                                     <segue destination="ln9-6M-WL7" kind="embed" id="pnm-F6-F8h"/>
@@ -222,7 +226,7 @@
                             <constraint firstItem="KWo-qg-cwb" firstAttribute="centerX" secondItem="Pfr-PW-ZI3" secondAttribute="centerX" id="nR5-ws-6N3"/>
                             <constraint firstItem="QnW-Sx-Tnv" firstAttribute="top" secondItem="lBD-s7-8t9" secondAttribute="top" constant="28" id="p5D-c7-lGW"/>
                             <constraint firstAttribute="trailing" secondItem="6LO-Lb-msR" secondAttribute="trailing" id="pvq-K7-uG1"/>
-                            <constraint firstItem="6LO-Lb-msR" firstAttribute="top" secondItem="lBD-s7-8t9" secondAttribute="top" constant="100" id="zU5-n4-Kh5"/>
+                            <constraint firstItem="6LO-Lb-msR" firstAttribute="top" secondItem="lBD-s7-8t9" secondAttribute="top" constant="80" id="zU5-n4-Kh5"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="jzJ-RZ-SS8" appends="YES" id="nGc-bh-9JC"/>
