--- a/mia/Views/HomePage/Radio/HXRadioView.xib
+++ b/mia/Views/HomePage/Radio/HXRadioView.xib
@@ -15,64 +15,58 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Adt-yX-Kcn">
                     <rect key="frame" x="10" y="0.0" width="300" height="300"/>
                     <animations/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Adt-yX-Kcn" secondAttribute="height" multiplier="1:1" id="QpK-Bh-3pn"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="歌曲名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRQ-Sl-Nih">
-                    <rect key="frame" x="30" y="276" width="60" height="24"/>
+                    <rect key="frame" x="30" y="268" width="54" height="22"/>
                     <animations/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="演唱者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NoX-pC-2kt">
-                    <rect key="frame" x="100" y="276" width="60" height="24"/>
+                    <rect key="frame" x="94" y="268" width="54" height="22"/>
                     <animations/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" contentMode="left" text="Andy矢倉: 评论内容" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="207" translatesAutoresizingMaskIntoConstraints="NO" id="fmy-Es-e4Z" customClass="TTTAttributedLabel">
+                    <rect key="frame" x="30" y="300" width="260" height="50"/>
+                    <animations/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="WM5-Zv-pb0"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="地理位置信息" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkl-aD-tRT">
+                    <rect key="frame" x="226" y="360" width="84" height="17"/>
+                    <animations/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G7H-iu-GBN">
+                    <rect key="frame" x="198" y="359" width="20" height="20"/>
+                    <animations/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="G7H-iu-GBN" secondAttribute="height" multiplier="1:1" id="ig3-f1-SjC"/>
+                        <constraint firstAttribute="width" constant="20" id="kGm-cZ-R9b"/>
+                    </constraints>
+                </imageView>
                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzP-as-myT">
-                    <rect key="frame" x="260" y="270" width="30" height="30"/>
+                    <rect key="frame" x="260" y="260" width="30" height="30"/>
                     <animations/>
                     <connections>
                         <action selector="starButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="cgy-dx-Mke"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tpO-6L-CEA">
-                    <rect key="frame" x="30" y="320" width="45" height="30"/>
-                    <animations/>
-                    <state key="normal" title="分享者"/>
-                    <connections>
-                        <action selector="sharerNameButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="IHa-RH-XU8"/>
-                    </connections>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fmy-Es-e4Z">
-                    <rect key="frame" x="83" y="320" width="207" height="60"/>
-                    <animations/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="60" id="WM5-Zv-pb0"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkl-aD-tRT">
-                    <rect key="frame" x="268" y="400" width="42" height="21"/>
-                    <animations/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G7H-iu-GBN">
-                    <rect key="frame" x="230" y="396" width="30" height="30"/>
-                    <animations/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="G7H-iu-GBN" secondAttribute="height" multiplier="1:1" id="ig3-f1-SjC"/>
-                        <constraint firstAttribute="width" constant="30" id="kGm-cZ-R9b"/>
-                    </constraints>
-                </imageView>
             </subviews>
             <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -80,19 +74,17 @@
                 <constraint firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" constant="10" id="1xn-AD-Vcl"/>
                 <constraint firstItem="dkl-aD-tRT" firstAttribute="leading" secondItem="G7H-iu-GBN" secondAttribute="trailing" constant="8" id="9E2-tH-8uI"/>
                 <constraint firstItem="G7H-iu-GBN" firstAttribute="centerY" secondItem="dkl-aD-tRT" secondAttribute="centerY" id="OMS-Xf-qYo"/>
-                <constraint firstItem="tpO-6L-CEA" firstAttribute="top" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="20" id="P5G-gZ-keB"/>
+                <constraint firstItem="NoX-pC-2kt" firstAttribute="bottom" secondItem="lRQ-Sl-Nih" secondAttribute="bottom" id="OQr-59-DnV"/>
                 <constraint firstItem="NoX-pC-2kt" firstAttribute="leading" secondItem="lRQ-Sl-Nih" secondAttribute="trailing" constant="10" id="PjO-br-AJo"/>
-                <constraint firstItem="fmy-Es-e4Z" firstAttribute="leading" secondItem="tpO-6L-CEA" secondAttribute="trailing" constant="8" id="Tsp-0X-cYk"/>
+                <constraint firstItem="fmy-Es-e4Z" firstAttribute="leading" secondItem="lRQ-Sl-Nih" secondAttribute="leading" id="SnG-ha-3hk"/>
                 <constraint firstItem="Adt-yX-Kcn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="U76-S6-GrS"/>
                 <constraint firstItem="lRQ-Sl-Nih" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" constant="20" id="UBI-bI-X3r"/>
-                <constraint firstItem="dkl-aD-tRT" firstAttribute="top" secondItem="fmy-Es-e4Z" secondAttribute="bottom" constant="20" id="UE8-DA-brT"/>
-                <constraint firstItem="NoX-pC-2kt" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="XwQ-T8-n2y"/>
-                <constraint firstItem="tpO-6L-CEA" firstAttribute="leading" secondItem="lRQ-Sl-Nih" secondAttribute="leading" id="ZME-ew-MF7"/>
+                <constraint firstItem="dkl-aD-tRT" firstAttribute="top" secondItem="fmy-Es-e4Z" secondAttribute="bottom" constant="10" id="UE8-DA-brT"/>
                 <constraint firstItem="fmy-Es-e4Z" firstAttribute="trailing" secondItem="wzP-as-myT" secondAttribute="trailing" id="ZSF-HZ-8kH"/>
                 <constraint firstItem="dkl-aD-tRT" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="gCJ-v4-JYc"/>
-                <constraint firstItem="wzP-as-myT" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="gR5-dO-bWP"/>
-                <constraint firstItem="lRQ-Sl-Nih" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="jKA-kD-cJa"/>
-                <constraint firstItem="fmy-Es-e4Z" firstAttribute="top" secondItem="tpO-6L-CEA" secondAttribute="top" id="kgM-pB-Zs2"/>
+                <constraint firstItem="fmy-Es-e4Z" firstAttribute="top" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="hiM-qn-igw"/>
+                <constraint firstItem="wzP-as-myT" firstAttribute="bottom" secondItem="lRQ-Sl-Nih" secondAttribute="bottom" id="j91-e4-kug"/>
+                <constraint firstItem="lRQ-Sl-Nih" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="-10" id="jKA-kD-cJa"/>
                 <constraint firstItem="Adt-yX-Kcn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="lGy-uv-HfU"/>
                 <constraint firstItem="wzP-as-myT" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" constant="-20" id="o6g-Q7-SJz"/>
             </constraints>
